Small changes on view

--- a/src/main/resources/templates/simple-elevator-run.html
+++ b/src/main/resources/templates/simple-elevator-run.html
@@ -8,18 +8,17 @@
   <a  th:href="@{/simple-elevator}" type='button' class="btn btn-secondary">reset</a>
   <div class="row">
 
-    <input type="range" value="0" min="1" th:max="${numberOfSteps}" oninput="this.nextElementSibling.value = ''; this.nextElementSibling.value = get(this.value)">
-    <output style="white-space: pre;" id="amount" name="amount"></output>
+    <input style="margin: 10px" type="range" value="0" min="1" th:max="${numberOfSteps}" oninput="this.nextElementSibling.value = ''; this.nextElementSibling.value = get(this.value)">
+    <output style="white-space: pre;" id="amount" name="amount">Move slider to show results</output>
   </div>
-
   <script th:inline="javascript">
     function get(index2) {
-      var index = document.getElementById("amount").value;
+      var index = 0;
       var array = [[${summary}]];
       if (index >= 0 && index2-1 <= array.length - 1) {
         var selected = array[index2-1];
       }
-      return selected.toString();
+      return 'Simulation Step: '+ index2 + '\n' + selected.toString();
     }
   </script>
 
