--- a/src/main/resources/templates/simple-elevator.html
+++ b/src/main/resources/templates/simple-elevator.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 <div class="container">
-<form method="post" th:object="${form}">
+  <div class="col-sm-10">
+    Set up your run by providing set of elevators and how many floors will be possible for elevators to move. Then provide some random users for simulation and how many steps will elevators move.
+  </div>
+<form method="post" th:object="${form}" style="padding-top: 20px">
   <div class="row g-2">
     <div class="col-sm-2">
       <label>Numbers Of Elevators</label>
@@ -36,7 +39,9 @@
     </div>
 
   </div>
-  <button class="btn btn-primary" type="submit">Run</button>
+  <div class="container" style="padding-top: 10px">
+    <button class="btn btn-primary" type="submit">Run</button>
+  </div>
 
 </form>
 
