--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <title>Elevator System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
 
@@ -15,8 +15,7 @@
     <ul class="nav nav-pills">
         <li class="nav-item"><a th:href="@{/}" class="nav-link active" aria-current="page">Home</a></li>
         <li class="nav-item"><a th:href="@{/simple-elevator}" class="nav-link">Elevator v1</a></li>
-        <li class="nav-item"><a th:href="@{/}" class="nav-link">Elevator v2</a></li>
-        <li class="nav-item"><a th:href="@{/}" class="nav-link">Elevator v3</a></li>
+        <li class="nav-item"><a th:href="@{/elevator}" class="nav-link">Elevator v2</a></li>
     </ul>
 </header>
 <div class="container-fluid">
@@ -25,5 +24,7 @@
     </main>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
