--- a/src/main/resources/templates/elevator.html
+++ b/src/main/resources/templates/elevator.html
@@ -6,7 +6,7 @@
 <body>
 <div class="container">
     <div class="col-sm-10">
-        Set up your run by providing set of elevators and how many floors will be possible for elevators to move. Then provide some random users for simulation and how many steps will elevators move.
+        Set up your run by providing set of elevators and how many floors will be possible for elevators to move. But before provide users for simulation. You can set up when in simulation step will user star to move.
     </div>
     <form method="post" th:object="${elevatorUser}" th:action="@{/elevator}">
 
